Fix text overflow of the DateBox with the "datetime-local" input type (#6965)

--- a/styles/widgets/common/dateBox.less
+++ b/styles/widgets/common/dateBox.less
@@ -14,6 +14,10 @@
 
 .dx-datebox {
     max-width: 100%;
+
+    .dx-texteditor-input::-webkit-datetime-edit {
+        .dx-overflow();
+    }
 }
 
 .dx-datebox.dx-texteditor-empty {
